Added runner for tests.